--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,13 @@
 	"image": "mcr.microsoft.com/devcontainers/base:bullseye",
 	"features": {
 		"ghcr.io/devcontainers/features/nix:1": {}
+	},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"bbenoist.Nix"
+			]
+		}
 	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
