--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "systemHostname": "BarbeNoire",
+    "systemHostname": "work",
     "userConfig":
     {
-      "username": "kiko",
-      "home": "/home/kiko"
+      "username": "qjoly01",
+      "home": "/home/qjoly01"
     }
   }
